--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="semana1.js"></script> -->
-    <script src="semana2.js"></script>
+    <!-- <script src="semana2.js"></script> -->
+    <script src="semana3.js"></script>
   </head>
   <body></body>
 </html>
