--- a/index.html
+++ b/index.html
@@ -4,135 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./style-semana4.css" /> -->
-    <link rel="stylesheet" href="style-flex-semana5.css" />
-    <!-- <link rel="stylesheet" href="style-grid-semana5.css" /> -->
-    <title>Labenu Supermercado</title>
-    <!-- <script src="semana1.js"></script> -->
-    <!-- <script src="semana2.js"></script> -->
-    <!-- <script src="semana3.js"></script> -->
+    <title>Supermercado</title>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style-semana5.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Labenu Supermercado</h1>
+        <h1>Supermercado</h1>
+        <span
+          class="material-symbols-outlined home"
+          style="color: white; font-size: 28px"
+          onclick="home()"
+        >
+          home
+        </span>
       </header>
       <main>
         <div class="pesquisa">
-          <label for="produto"></label>
-          <input
-            type="text"
-            placeholder="Digite o nome do produto"
-            name="produto"
-            id="produto"
-          />
-          <button type="submit">Pesquisar</button>
+          <div class="barra-de-pesquisa">
+            <label for="produto"></label>
+            <input
+              type="text"
+              placeholder="O que você está procurando?"
+              name="produto"
+              id="produto"
+            />
+            <span class="material-symbols-outlined" style="color: gray">
+              search
+            </span>
+          </div>
+          <button
+            type="submit"
+            onclick="verificaProduto()"
+            class="botao"
+            id="botao"
+          >
+            Pesquisar
+          </button>
         </div>
-        <div class="lista-de-produtos">
-          <section class="produto">
-            <div class="imagem">
-              <img
-                src="./media/Arroz-Parbolizado-Tipo1-Urbano.png"
-                alt="Imagem do produto (arroz)"
-                height="120"
-              />
-            </div>
-            <ul>
-              <li>
-                <a href="https://pt.wikipedia.org/wiki/Arroz" target="_blank"
-                  >Arroz</a
-                >
-              </li>
-              <li><strong>Nome:</strong> Arroz Parbolizado Tipo 1</li>
-              <li><strong>Embalagem:</strong> 1 kg</li>
-              <li><strong>Marca:</strong> Urbano</li>
-              <li><strong>Preço:</strong> R$ 7,00</li>
-              <li><strong>Desconto:</strong> R$ 0,00</li>
-              <li>
-                <strong>Produtos Complementares:</strong> Feijão, Macarrão,
-                Farinha
-              </li>
-            </ul>
-          </section>
-          <section class="produto">
-            <div class="imagem">
-              <img
-                src="./media/Detergente-Neutro-Ype.png"
-                alt="Imagem do produto (detergente)"
-                height="120"
-              />
-            </div>
-            <ul>
-              <li>
-                <a
-                  href="https://pt.wikipedia.org/wiki/Detergente"
-                  target="_blank"
-                  >Detergente</a
-                >
-              </li>
-              <li><strong>Nome:</strong> Detergente Líquido Neutro</li>
-              <li><strong>Embalagem:</strong> 500 ml</li>
-              <li><strong>Marca:</strong> Ypê</li>
-              <li><strong>Preço:</strong> R$ 3,00</li>
-              <li><strong>Desconto:</strong> R$ 0,00</li>
-              <li>
-                <strong>Produtos Complementares:</strong> Sabão em barra, Sabão
-                em pó, Esponja
-              </li>
-            </ul>
-          </section>
-          <section class="produto">
-            <div class="imagem">
-              <img
-                src="./media/Leite-Condensado-Integral-Moça-Nestle-395g-300x300.png"
-                alt="Imagem do produto (leite condensado)"
-                height="120"
-              />
-            </div>
-            <ul>
-              <li>
-                <a
-                  href="https://pt.wikipedia.org/wiki/Leite_condensado"
-                  target="_blank"
-                  >Leite condensado</a
-                >
-              </li>
-              <li><strong>Nome:</strong> Leite Condensado Integral</li>
-              <li><strong>Embalagem:</strong> 395 g</li>
-              <li><strong>Marca:</strong> Nestle</li>
-              <li><strong>Preço:</strong> R$5,00</li>
-              <li><strong>Desconto:</strong> R$ 3,00</li>
-              <li>
-                <strong>Produtos Complementares:</strong> Chocolate, Açúcar,
-                Granulado
-              </li>
-            </ul>
-          </section>
-        </div>
-        <!-- <aside>
-        <h4>Menu Principal</h4>
-        <ul>
-          Departamentos
-        </ul>
-        <li>Bebidas</li>
-        <li>Beleza e Higiene</li>
-        <li>Cama, Mesa e Banho</li>
-        <li>Carnes e Embutidos</li>
-        <li>Congelados</li>
-        <li>Esporte e Lazer</li>
-        <li>Frios e Laticinios</li>
-        <li>Hortifruti</li>
-        <li>Limpeza</li>
-        <li>Mercearia</li>
-        <li>Papelaria</li>
-        <li>Pet Shop</li>
-        <h4>Fale Conosco</h4>
-        <h4>Cadastre-se</h4>
-      </aside> -->
+        <div class="lista-de-produtos"></div>
       </main>
       <footer>
-        <p>Criado por Analice Marques</p>
-        <p>github.com/analicemarques</p>
+        Criado por Analice Marques na Labenu
+        <div class="github">
+          <img src="./img/github.png" alt="" />
+          <a href="https://github.com/AnaliceMarques" target="_blank"
+            >github.com/analicemarques</a
+          >
+        </div>
       </footer>
     </div>
   </body>
